--- a/site/style.css
+++ b/site/style.css
@@ -5,8 +5,8 @@
 }
 
 body {
-  font-family: Arial, sans-serif;
-  background-color: #f4f4f4;
+  font-family: 'Roboto', sans-serif;
+  background-color: #E2E8F0;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -15,18 +15,34 @@ body {
 }
 
 h1 {
-  font-size: 2.5rem;
+  font-size: 5rem;
   margin-bottom: 20px;
+  align-items: center;
   color: #333;
 }
 
 h2 {
-  font-size: 1.8rem;
+  font-size: 2rem;
   margin: 30px 0 20px;
+  align-items: center;
   color: #555;
 }
 
-.ustawienia, .strony {
+.settings {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  margin-bottom: 20px;
+}
+.settings button {
+  font-size: 50px;
+  padding: 15px;
+  text-align: center;
+}
+
+.pages {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -35,30 +51,48 @@ h2 {
   margin-bottom: 20px;
 }
 
+.page img {
+ display: flex;
+ height: 300px;
+ width: 400px; /* Set the width to 100% */
+ margin: 0; /* Remove any margin */
+ display: inline-block; /* Ensure the image is inline with the text */
+ vertical-align: middle; /* Align the image vertically with the text */
+ transform-origin: middle; /* Control the scaling origin */
+}
 button {
-  padding: 10px 20px;
-  font-size: 1rem;
-  border: 2px solid #007BFF;
-  border-radius: 5px;
-  background-color: #007BFF;
-  color: white;
-  cursor: pointer;
-  transition: background-color 0.3s, transform 0.2s;
+  display: flex;
+  align-items: center;
+  font-weight: 500;
+  font-size: 16px;
+  letter-spacing: 0.5px;
+  padding: 10px; /* Add padding to the button */
+  border: none; /* Add border to the button */
+  border-radius: 16px; /* Add border radius to the button */
+  background-color: #FFF4E6; /* Set background color */
+  color: #4A4A4A;
+  cursor: pointer; /* Set cursor to pointer */
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  transition: background-color 0.3s, transform 0.2s; /* Add transition effects */
 }
 
 button:hover {
-  background-color: #0056b3;
-  transform: scale(1.05);
+  background-color: #FFE5CC;
+  border-color: #FFE5CC;
+  transform: scale(0.97);
 }
 
 button:active {
-  background-color: #003f7f;
+  background-color: #FFD5B3;
 }
 
-.ustawienia {
+.settings {
   margin-top: 20px;
 }
 
-.strony {
+.pages {
   margin-bottom: 40px;
+}
+.page {
+  display: flex;
 }
