--- a/site/style.css
+++ b/site/style.css
@@ -49,6 +49,7 @@ h2 {
   align-items: center;
   gap: 10px;
   margin-bottom: 20px;
+  margin-top: 15px;
 }
 
 .page img {
@@ -60,11 +61,16 @@ h2 {
  vertical-align: middle; /* Align the image vertically with the text */
  transform-origin: middle; /* Control the scaling origin */
 }
+.page button{
+  font-size: 30px;
+  text-align: center;
+  font-weight: bold;;
+}
 button {
   display: flex;
   align-items: center;
+  flex-direction: column;
   font-weight: 500;
-  font-size: 16px;
   letter-spacing: 0.5px;
   padding: 10px; /* Add padding to the button */
   border: none; /* Add border to the button */
@@ -84,15 +90,4 @@ button:hover {
 
 button:active {
   background-color: #FFD5B3;
-}
-
-.settings {
-  margin-top: 20px;
-}
-
-.pages {
-  margin-bottom: 40px;
-}
-.page {
-  display: flex;
 }
