--- a/site/style.css
+++ b/site/style.css
@@ -14,6 +14,10 @@ body {
   height: 100vh;
 }
 
+a {
+  text-decoration: none;
+}
+
 h1 {
   font-size: 5rem;
   margin-bottom: 20px;
@@ -33,13 +37,20 @@ h2 {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 10px;
+  gap: 15px;
   margin-bottom: 20px;
 }
 .settings button {
   font-size: 50px;
   padding: 15px;
   text-align: center;
+  width: 100%;
+  max-width: 600px; 
+}
+
+.settings a {
+  width: 100%; /* Make all links the same width */
+  max-width: 500px; /* Set a maximum width for the links */
 }
 
 .pages {
