--- a/site/style.css
+++ b/site/style.css
@@ -117,6 +117,7 @@ button {
   transition: background-color 0.3s, transform 0.2s; /* Add transition effects */
 }
 
+
 button:hover {
   background-color: #FFE5CC;
   border-color: #FFE5CC;
@@ -127,4 +128,7 @@ button:active {
   background-color: #FFD5B3;
 }
 
-
+.siteSelect--selected {
+  background-color: #FFD5B3;
+  transform: scale(0.97);
+}
