--- a/site/style.css
+++ b/site/style.css
@@ -32,6 +32,43 @@ h2 {
   color: #555;
 }
 
+ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  text-align: center;
+}
+
+.bold_site {
+  font-weight: bold;
+  color: #333;
+}
+
+.app_desc {
+  font-size: 1.5rem;
+  margin-bottom: 20px;
+  color: #555;
+    background: white;
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+    max-width: 600px;
+    text-align: center;
+}
+
+.site_desc {
+  font-size: 1.23rem;
+  margin-bottom: 20px;
+  color: #555;
+    background: white;
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+    max-width: 600px;
+    text-align: center;
+}
+
+
 .settings {
   display: flex;
   flex-direction: column;
