--- a/site/style.css
+++ b/site/style.css
@@ -171,6 +171,49 @@ button:active {
   transform: scale(0.97);
 }
 
+.selected_eplus {
+  background-color: #FFE5CC;
+  color: #4A4A4A;
+  transform: scale(0.97);
+}
+
+.l-tike_options {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
+  margin-bottom: 20px;
+  font-size: 1.2rem;
+}
+
+.l-tike_input {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
+}
+
+.l-tike_input input {
+  font-size: 1.2rem;
+}
+
+.eplus_grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
+  justify-items: center;
+}
+
+.monthSelect {
+  padding: 10px;
+  font-size: 16px;
+  cursor: pointer;
+  width: 100%;
+  max-width: 600px;
+}
+
 .chosen-sites {
   display: flex;
   justify-content: center;
