--- a/site/style.css
+++ b/site/style.css
@@ -250,10 +250,13 @@ button:active {
   padding: 20px;
   border-radius: 5px;
   background-color: #f9f9f9;
-  max-width: 800px;
+  width: 600px;
   margin: 0 auto;
-  overflow: auto;
+  overflow: hidden;
   margin-bottom: 20px;
+  height: 400px; 
+  display: flex; 
+  flex-direction: column-reverse;
 }
 
 .chosen-sites img {
